# Svanipp

./: .gitattributes  .gitignore  CMakeLists.txt  How To Use.txt  InstallationLog.txt  README.md
scripts/: build-windows.ps1  package-windows.ps1
src/: main.cpp
src/console/: console_ui.cpp  tui.cpp  tui.h
src/transfer/: receiver.cpp  sender.cpp  sender.h
